# geometric-threat-intel

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: article.md
src/examples/: basic_usage.py
src/threat_plane/: __init__.py  embedding.py  graph.py  projection.py  topology.py  visualization.py
visualizations/: interactive-demo.html
visualizations/components/: ThreatPlane.jsx
